update paginations in checklist

--- a/survey/core/templates/core/checklist_all.html
+++ b/survey/core/templates/core/checklist_all.html
@@ -40,7 +40,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for checklist in checklists %}
+                                        {% for checklist in checklists_lists %}
                                         <tr>
                                             <td>{{forloop.counter}}</td>
                                             <td>{{checklist.text}}</td>
