update recent updates templates

--- a/survey/core/templates/core/project_detail.html
+++ b/survey/core/templates/core/project_detail.html
@@ -78,7 +78,7 @@
                                 {% if if_material %}
                                     <a href="{% url 'core:material_list' project.pk %}" title=""
                                        class="btn btn-sm btn-xs btn-primary"><i
-                                            class="la la-caret-right"></i> More</a>
+                                            class="la la-caret-right"></i> View All</a>
                                 {% endif %}
                                     <a href="{% url 'core:material_create' project.pk %}">
                                 Create New
@@ -110,7 +110,7 @@
                                 {% if if_category %}
                                     <a href="{% url 'core:category_list' project.pk %}" title=""
                                        class="btn btn-sm btn-xs btn-primary"><i
-                                            class="la la-caret-right"></i> More</a>
+                                            class="la la-caret-right"></i> View All</a>
                                 {% endif %}
                                     <a href="{% url 'core:category_create' project.pk %}">
                                 Create New
