--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -193,7 +193,7 @@
                             <h4><a href="#" title="">Reports</a></h4>
                             <a href="{% url 'core:report_list' site.pk %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i
-                                    class="la la-caret-right"></i> More</a>
+                                    class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body" data-mh="sd-widget">
                             <div class="update-wrap">
@@ -232,7 +232,7 @@
                                     class="la la-plus"></i> Add</a>
                             <a href="{% url 'core:document_list' site.pk %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i
-                                    class="la la-caret-right"></i> More</a>
+                                    class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body no-padding-top" data-mh="sd-widget">
                             <ul class="row">
@@ -256,7 +256,7 @@
                         <div class="widget-head">
                             <h4><a href="#" title="">Pictures</a></h4>
                             <a href="#" title="" class="btn btn-sm btn-xs btn-primary"><i
-                                    class="la la-caret-right"></i> More</a>
+                                    class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body no-padding-top" data-mh="sd-widget">
                             <div class="row">
