--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -68,7 +68,7 @@
                                 <div class="widget-head">
                                     <h4><a href="#" title="">Manage User</a></h4>
                                     <a href="{% url 'core:user_list'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
-                                        class="la la-caret-right"></i> More </a>
+                                        class="la la-caret-right"></i> View All </a>
                                     <a href="{% url 'core:user_create'%}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> Create User</a>
 
