checklist and subchecklist api

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -156,7 +156,7 @@
 
                                                 <li>
                                                     <h6>
-                                                        <a href="{% url 'core:checklist' object.pk sub_step.pk %}">{{ sub_step.title }}</a>
+                                                        <a href="{% url 'core:checklist' object.pk step.pk sub_step.pk %}">{{ sub_step.title }}</a>
                                                     </h6>
                                                     <small>
                                                     </small>
