--- a/survey/core/templates/core/checklist_all.html
+++ b/survey/core/templates/core/checklist_all.html
@@ -32,9 +32,10 @@
                                     <thead>
                                         <tr>
                                             <th>S.N</th>
-                                            <th>Checklist</th>
+                                            <th>Title</th>
+                                            <!-- <th>Sub Checklist</th> -->
                                             <th>Status</th>
-
+    
                                             <th>Edit</th>
                                             <th>Delete</th>
                                         </tr>
@@ -43,7 +44,7 @@
                                         {% for checklist in checklists_lists %}
                                         <tr>
                                             <td>{{ forloop.counter0|add:checklists_lists.start_index }}</td>
-                                            <td>{{checklist.text}}</td>
+                                            <td>{{checklist.title}}</td>
                                             <td>{% if checklist.status is True %}
                                                 <i class="fa fa-check-circle"></i>
                                                 {% else %}
