--- a/survey/core/templates/core/recent_updates.html
+++ b/survey/core/templates/core/recent_updates.html
@@ -110,7 +110,7 @@
                                                 {% endif %}
                                                 {% if report.user %}
                                                     <a href="#" title="View details of user">
-                                                        <small><button><i class="la la-user" ></i>Sent by: {{ report.user }}</button></small>
+                                                        <small><button><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></button></small>
                                                     </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
                                                 {% endif %}
@@ -123,7 +123,7 @@
                                                     <!--{% if report.comment %}-->
                                                         <!--<small class="site_icon_float" style="">Comment: {{ report.comment }}</small><br>{% endif %}-->
                                                 {% if report.date %}
-                                                    <small><button><i class="site_icon_float" style=""><i class="la la-clock-o"
+                                                    <small><button><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
                                                                                                aria-hidden="true"></i>{{ report.date }}</button></small>
                                                     <!--<label>Photo:</label>-->
                                                 {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
