--- a/survey/core/templates/core/key_parts_house_delete.html
+++ b/survey/core/templates/core/key_parts_house_delete.html
@@ -10,10 +10,10 @@
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
                     <div class="widget-head">
-                        <h4><a href="#" title="">House and General Construction Materials Delete</a></h4>
+                        <h4><a href="#" title="">Key Parts Of House Delete</a></h4>
                     </div>
                     <div class="widget-body">
-                        <form method="POST" action="{% url 'core:house_general_construction_materials_delete' object.id%}">{% csrf_token %}
+                        <form method="POST" action="{% url 'core:key_parts_house_delete' object.id%}">{% csrf_token %}
                         Click Yes To Delete {{object.name}}
                         <button type="submit">YES</button>
                         </form>
