--- a/survey/core/templates/core/key_parts_house_form.html
+++ b/survey/core/templates/core/key_parts_house_form.html
@@ -10,13 +10,15 @@
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
                     <div class="widget-head">
-                        <h4><a href="#" title="">House and General Construction Materials Delete</a></h4>
+                        <h4><a href="#" title="">Key Parts Of House Create/Update</a></h4>
                     </div>
                     <div class="widget-body">
-                        <form method="POST" action="{% url 'core:house_general_construction_materials_delete' object.id%}">{% csrf_token %}
-                        Click Yes To Delete {{object.name}}
-                        <button type="submit">YES</button>
+                        <h3>Key Parts Of House{% if object %}Edit{% else %}Add{% endif %}</h3>
+                        <form action="" method="POST" enctype="multipart/form-data" novalidate> {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" class="btn btn-xs btn-primary">Submit</button>
                         </form>
+                    </div>
                 </div>
             </div>
         </div>
