--- a/survey/core/templates/core/key_parts_house_list.html
+++ b/survey/core/templates/core/key_parts_house_list.html
@@ -11,7 +11,7 @@
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
                     <div class="widget-head">
-                        <h4><a href="#" title="">House and General Construction Materials</a></h4>
+                        <h4><a href="#" title="">Key Parts Of House</a></h4>
                     </div>
                     <!--<div class="widget-body">-->
                         <!--{% for obj in object_list %}-->
@@ -21,9 +21,9 @@
                         <!--{% endfor %}-->
                     <!--</div>-->
                     <div class="d-flex justify-content-center">
-                        <div class="col-md-3 col-lg-8"> <a href="{% url 'core:house_general_construction_materials_add' %}" title=""
+                        <div class="col-md-3 col-lg-8"> <a href="{% url 'core:key_parts_house_add' %}" title=""
                                                           class="btn btn-sm btn-xs btn-primary"><i
-                                class="la la-plus"></i>Add House and General Construction Materials</a></p>
+                                class="la la-plus"></i>Add Key Parts Of House</a></p>
                             <div class="dash-right">
                                 <div class="widget-info margin-top-large">
                                     <table id="gallery" class="table table-bordered">
@@ -40,9 +40,9 @@
                                                 {% for obj in object_list %}
                                                 <tr>
                                                     <td>{{forloop.counter}}</td>
-                                                    <td><a href="{% url 'core:house_general_construction_materials_detail' obj.id %}">{{ obj.name }}</a></td>
-                                                    <td><a href="{% url 'core:house_general_construction_materials_edit' obj.id %}">Edit</td>
-                                                    <td><a href="{% url 'core:house_general_construction_materials_delete' obj.id %}">Delete</a></td>
+                                                    <td><a href="{% url 'core:key_parts_house_detail' obj.id %}">{{ obj.name }}</a></td>
+                                                    <td><a href="{% url 'core:key_parts_house_edit' obj.id %}">Edit</td>
+                                                    <td><a href="{% url 'core:key_parts_house_delete' obj.id %}">Delete</a></td>
                                                 </tr>
                                                 {%endfor%}
                                             </tbody>
