--- a/survey/core/templates/core/house_general_construction_materials_list.html
+++ b/survey/core/templates/core/house_general_construction_materials_list.html
@@ -5,7 +5,16 @@
 {% load get_files from webpack_loader %}
 
 {% block content %}
-
+<div class="row no-gutters">
+    <div class="col-md-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">{% if request.user.is_superuser %}
+                <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+                {% endif %}
+            </ol>
+        </nav>
+    </div>
     <div class="formHolder">
         <div class="widget-info margin-top-large">
             <div class="widget-head">
