--- a/survey/core/templates/core/make_house_strong_list.html
+++ b/survey/core/templates/core/make_house_strong_list.html
@@ -6,6 +6,15 @@
 {% load get_files from webpack_loader %}
 
 {% block content %}
+<div class="row no-gutters">
+    <div class="col-md-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">{% if request.user.is_superuser %}
+                <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                {% endif %}
+            </ol>
+        </nav>
+    </div>
 
     <div class="formHolder">
         <div class="widget-info margin-top-large">
