update crud materials and update report details template

--- a/survey/core/templates/core/substepreport_detail.html
+++ b/survey/core/templates/core/substepreport_detail.html
@@ -40,7 +40,7 @@
                     <img src="{{ object.photo.url }}" alt="">
                     {% endif %}
                     <div>
-                        <a href="{% url 'core:substep_report_edit' object.id %}"><button>Edit</button></a>
+                        <a href="{% url 'core:substep_report_delete' object.id %}"><button>Delete</button></a>
                     </div>
                 </div>
             </div>
