--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -83,7 +83,8 @@
                     <div class="widget-body mt-2 horizontalForm">
                         <div class="widget-head">
                             <h4><a href="#" title="">Report List</a></h4>
-                            <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export</button></a></span>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report' %}"><button>Export Excel</button></a></span>
+                            <span class="tools pull-right"><a href="{% url 'core:export_report_pdf' %}"><button>Export Pdf </button></a></span>
                         </div>
                         <div id="table-wrapper">
                             <div id="table-scroll">
