--- a/survey/core/templates/core/substep_checklist.html
+++ b/survey/core/templates/core/substep_checklist.html
@@ -66,7 +66,7 @@
                         <h4><a href="#" title="">Checklist</a></h4>
                         <a href="{% url 'core:checklist_create' site.pk step_id substep_id %}" title=""
                                class="btn btn-sm btn-xs btn-primary"><i
-                                    class="la la-plus"></i>Create Checklist</a>
+                                    class="la la-plus"></i>Add Checklist</a>
                     </div>
                     <form method="post">{% csrf_token %}
                         <!--{{form.as_p}}-->
@@ -74,41 +74,34 @@
                             <div class="table-responsive">
                                 <table id="checklist" class="table table-hover table-striped">
                                     <thead>
-                                        <tr>
-                                            <th>S.N</th>
-                                            <th>Title</th>
-                                            <th>Sub Checklist</th>
-                                            <th>Status</th>
-
-                                            <th>Edit</th>
-                                            <th>Delete</th>
-                                        </tr>
+                                    <tr>
+                                        <th>S.N</th>
+                                        <th>Title</th>
+                                        <th>Sub Checklist</th>
+                                        <th>Status</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
                                     </thead>
                                     <tbody>
-                                        {% for checklist in checklists %}
-                                        <tr>
-                                            <td>{{forloop.counter}}</td>
-                                            <td>{{checklist.title}}</td>
-                                            <td>
-                                                {% for sub_checklist in checklist.sub_checklists.all %}
-                                                    {{ sub_checklist.title }}<br>
-                                                {% endfor %}
-                                            </td>
-                                            <td>
-                                                {% for sub_checklist in checklist.sub_checklists.all %}
-                                                    {% if sub_checklist.status is True %}
-                                                    <i class="fa fa-check-circle"></i>
-                                                    {% else %}
-                                                    <i class="fa fa-times-circle"></i>
-                                                    {% endif %}
-                                                    <br>
-                                                {% endfor %}
-                                            </td>
-
-                                            <td><a href="{% url 'core:checklist_update' checklist.pk %}">Edit</a></td>
-                                            <td><a href="{% url 'core:checklist_delete' checklist.pk %}">Delete</a></td>
-                                        </tr>
-                                        {%endfor%}
+                                    {% for checklist in checklists %}
+                                    <tr>
+                                        <td>{{forloop.counter}}</td>
+                                        <td>{{checklist.title}}</td>
+                                        <td>{% for sub_checklist in checklist.sub_checklists.all %}
+                                            {{ sub_checklist.title }}<br>
+                                            {% endfor %}</td>
+                                        <td>{% for sub_checklist in checklist.sub_checklists.all %}
+                                            {% if sub_checklist.status is True %}
+                                            <i class="fa fa-check-circle"></i>
+                                            {% else %}
+                                            <i class="fa fa-times-circle"></i>
+                                            {% endif %}<br>
+                                            {% endfor %}</td>
+                                        <td><a href="{% url 'core:checklist_update' checklist.pk %}">Edit</a></td>
+                                        <td><a href="{% url 'core:checklist_delete' checklist.pk %}">Delete</a></td>
+                                    </tr>
+                                    {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
