--- a/survey/core/templates/core/material_detail.html
+++ b/survey/core/templates/core/material_detail.html
@@ -19,48 +19,46 @@
                 </ol>
             </nav>
         </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
-                            <div class="widget-head">
-                                <h4><a href="#" title="">Materials &nbsp</a></h4>
-                                <a href="{% url 'core:material_delete' object.id %}" title=""
-                                   class="btn btn-sm btn-xs btn-primary"><i class="la la-delete"></i>Delete</a>
-                                <a href="{% url 'core:material_update' object.id %}" title=""
-                                   class="btn btn-sm btn-xs btn-primary"><i class="la la-edit"></i>Edit &nbsp</a>
-                            </div>
-                            <div class="widget-body">
-                                {% if object.title %}
-                                    <h5>Name</h5><br>
-                                    {{ object.title }}
-                                    </p><br>{% endif %}{% if object.organization %}
-                                <p>
-                                <h5>Organization</h5><br>
-                                <p>
-                                    {{ object.organization }}
-                                </p><br>{% endif %}{% if object.good_photo %}
-                                <h5>Good Photo</h5><br>
-                                <p>
-                                    <img src="{{ MEDIA_URL }}{{ object.good_photo }}">
-                                </p><br>{% endif %}{% if object.bad_photo %}
-                                <h5>Bad Photo</h5><br>
-                                <p>
-                                    <img src="{{ MEDIA_URL }}{{ object.bad_photo }}">
-                                </p><br>{% endif %}{% if object.description %}
-                                <h5>Description</h5><br>
-                                <p>
-                                    {{ object.description }}
-                                </p><br>
-                            {% endif %}
-                            </div>
+    </div>
+        <div class="d-flex justify-content-center">
+            <div class="col-md-2 col-lg-9">
+                <div class="dash-right">
+                    <div class="widget-info margin-top-large">
+                        <div class="widget-head">
+                            <h4><a href="#" title="">Material Details</a></h4>
+                            <a href="{% url 'core:material_delete' object.id %}" title=""
+                               class="btn btn-sm btn-xs btn-primary"><i class="la la-delete"></i>Delete</a>
+                            <a href="{% url 'core:material_update' object.id %}" title=""
+                               class="btn btn-sm btn-xs btn-primary"><i class="la la-edit"></i>Edit &nbsp</a>
+                        </div>
+                        <div class="widget-body">
+                            {% if object.title %}
+                                <h5>Name</h5><br>
+                                {{ object.title }}
+                                </p><br>{% endif %}{% if object.organization %}
+                            <p>
+                            <h5>Organization</h5><br>
+                            <p>
+                                {{ object.organization }}
+                            </p><br>{% endif %}{% if object.good_photo %}
+                            <h5>Good Photo</h5><br>
+                            <p>
+                                <img src="{{ MEDIA_URL }}{{ object.good_photo }}">
+                            </p><br>{% endif %}{% if object.bad_photo %}
+                            <h5>Bad Photo</h5><br>
+                            <p>
+                                <img src="{{ MEDIA_URL }}{{ object.bad_photo }}">
+                            </p><br>{% endif %}{% if object.description %}
+                            <h5>Description</h5><br>
+                            <p>
+                                {{ object.description }}
+                            </p><br>
+                        {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 {% endblock content %}
 {% block extra_script %}
