--- a/survey/core/templates/core/material_form.html
+++ b/survey/core/templates/core/material_form.html
@@ -32,62 +32,68 @@
             </ol>
         </nav>
     </div>
-    <div class="col-md-4 col-lg-3">
-        <div class="module-school-list">
-            <div class="school-wrap">
-                <ul class="school-list">
-                    {% if request.user.is_superuser %}
-                    {% for project in projects %}
-                    <li>
-                        <a href="{% url 'core:project_dashboard' project.pk %}" title="">
-                            <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
-                            <h6>{{ project }}</h6>
-                            <span>{{ project.address }}</span>
-                        </a>
-                    </li>
-                    {% endfor %}
-                    {% else %}
-                    {% for site in project.sites.all %}
-                    <li>
-                        <a href="{% url 'core:site_detail' site.pk %}" title="">
-                            <img src="assets/img/img-school.png" class="school-logo" alt="">
-                            <h6>{{ site }}</h6>
-                            <span>{{ site.address }}</span>
-                        </a>
-                    </li>
-                    {% endfor %}
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </div>
+    <!--<div class="col-md-4 col-lg-3">-->
+        <!--<div class="module-school-list">-->
+            <!--<div class="school-wrap">-->
+                <!--<ul class="school-list">-->
+                    <!--{% if request.user.is_superuser %}-->
+                    <!--{% for project in projects %}-->
+                    <!--<li>-->
+                        <!--<a href="{% url 'core:project_dashboard' project.pk %}" title="">-->
+                            <!--<img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">-->
+                            <!--<h6>{{ project }}</h6>-->
+                            <!--<span>{{ project.address }}</span>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--{% endfor %}-->
+                    <!--{% else %}-->
+                    <!--{% for site in project.sites.all %}-->
+                    <!--<li>-->
+                        <!--<a href="{% url 'core:site_detail' site.pk %}" title="">-->
+                            <!--<img src="assets/img/img-school.png" class="school-logo" alt="">-->
+                            <!--<h6>{{ site }}</h6>-->
+                            <!--<span>{{ site.address }}</span>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--{% endfor %}-->
+                    <!--{% endif %}-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+</div>
     <div class="d-flex justify-content-center">
-        <div class="col-md-2 col-lg-12">
+        <div class="col-md-2 col-lg-9">
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
-                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
-                        {% for error in form.non_field_errors %}
-                        <div class="form-group has-errors text-danger small">
-                            {{ error }}
-                        </div>
-                        {% endfor %}
-                        {% for field in form %}
-                        <div class="form-group">
-                            {{ field.errors }}
-                            {{ field.label_tag }}
-                            {{ field }}
-                        </div>
-                        {% endfor %}
-                        <div class="col-md-8">
-                            <button type="submit" class="btn btn-primary">Submit
-                            </button>
-                        </div>
-                    </form>
+                    <div class="widget-head">
+                        <h4><a href="#" title="">Material Create/Update</a></h4>
+                    </div>
+                    <div class="widget-body">
+                        <h3>Material{% if object %}&nbsp;Edit{% else %}&nbsp;Add{% endif %}</h3>
+                        <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                            {% for error in form.non_field_errors %}
+                            <div class="form-group has-errors text-danger small">
+                                {{ error }}
+                            </div>
+                            {% endfor %}
+                            {% for field in form %}
+                            <div class="form-group">
+                                {{ field.errors }}
+                                {{ field.label_tag }}
+                                {{ field }}
+                            </div>
+                            {% endfor %}
+                            <div class="col-md-8">
+                                <button type="submit" class="btn btn-primary">Submit
+                                </button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock content %}
 {% block extra_script %}
     {% render_bundle 'project' 'js' %}
